fix homepage for github pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/kiruthiga0306/kiruthiga0306weather-app-react",
+  "homepage": "https://kiruthiga0306.github.io/kiruthiga0306weather-app-react",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
